1.添加数据可视化

--- a/render.html
+++ b/render.html
@@ -8,11 +8,11 @@
 
 </head>
 <body>
-    <div id="7da22bd1de144489bd848a7fb8c82e3c" style="width:900px; height:500px;"></div>
+    <div id="2579ab0fb9de4497b7720a8cc118ed14" style="width:900px; height:500px;"></div>
     <script>
-        var chart_7da22bd1de144489bd848a7fb8c82e3c = echarts.init(
-            document.getElementById('7da22bd1de144489bd848a7fb8c82e3c'), 'white', {renderer: 'canvas'});
-        var option_7da22bd1de144489bd848a7fb8c82e3c = {
+        var chart_2579ab0fb9de4497b7720a8cc118ed14 = echarts.init(
+            document.getElementById('2579ab0fb9de4497b7720a8cc118ed14'), 'white', {renderer: 'canvas'});
+        var option_2579ab0fb9de4497b7720a8cc118ed14 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -42,7 +42,7 @@
     "series": [
         {
             "type": "map",
-            "name": "\u5546\u5bb6A",
+            "name": "\u96f7\u514b\u8428\u65afES\u8f66\u53cb\u5206\u5e03",
             "label": {
                 "show": true,
                 "position": "top",
@@ -51,28 +51,20 @@
             "mapType": "china",
             "data": [
                 {
-                    "name": "\u9ed1\u9f99",
-                    "value": 4
+                    "name": "\u6d77\u5916",
+                    "value": 1
                 },
                 {
-                    "name": "\u6d59\u6c5f",
-                    "value": 56
+                    "name": "\u897f\u85cf",
+                    "value": 1
                 },
                 {
-                    "name": "\u8fbd\u5b81",
-                    "value": 20
+                    "name": "\u53f0\u6e7e",
+                    "value": 2
                 },
                 {
-                    "name": "\u798f\u5efa",
-                    "value": 36
-                },
-                {
-                    "name": "\u6c5f\u82cf",
-                    "value": 77
-                },
-                {
-                    "name": "\u5c71\u4e1c",
-                    "value": 32
+                    "name": "\u9999\u6e2f",
+                    "value": 1
                 },
                 {
                     "name": "\u5409\u6797",
@@ -83,16 +75,40 @@
                     "value": 11
                 },
                 {
-                    "name": "\u56db\u5ddd",
+                    "name": "\u5929\u6d25",
+                    "value": 11
+                },
+                {
+                    "name": "\u5c71\u4e1c",
                     "value": 32
                 },
                 {
-                    "name": "\u8d35\u5dde",
-                    "value": 9
+                    "name": "\u65b0\u7586",
+                    "value": 2
                 },
                 {
-                    "name": "\u53f0\u6e7e",
-                    "value": 2
+                    "name": "\u6cb3\u5317",
+                    "value": 12
+                },
+                {
+                    "name": "\u8fbd\u5b81",
+                    "value": 20
+                },
+                {
+                    "name": "\u4e0a\u6d77",
+                    "value": 47
+                },
+                {
+                    "name": "\u798f\u5efa",
+                    "value": 36
+                },
+                {
+                    "name": "\u6c5f\u82cf",
+                    "value": 77
+                },
+                {
+                    "name": "\u5185\u8499\u53e4",
+                    "value": 1
                 },
                 {
                     "name": "\u6e56\u5317",
@@ -103,56 +119,48 @@
                     "value": 8
                 },
                 {
-                    "name": "\u5185\u8499\u53e4",
-                    "value": 1
-                },
-                {
-                    "name": "\u897f\u85cf",
-                    "value": 1
-                },
-                {
-                    "name": "\u9999\u6e2f",
-                    "value": 1
-                },
-                {
-                    "name": "\u6cb3\u5357",
-                    "value": 11
-                },
-                {
-                    "name": "\u6d77\u5357",
-                    "value": 3
-                },
-                {
-                    "name": "\u91cd\u5e86",
-                    "value": 11
-                },
-                {
-                    "name": "\u65b0\u7586",
-                    "value": 2
-                },
-                {
                     "name": "\u5317\u4eac",
                     "value": 65
+                },
+                {
+                    "name": "\u6c5f\u897f",
+                    "value": 7
+                },
+                {
+                    "name": "\u6fb3\u95e8",
+                    "value": 5
+                },
+                {
+                    "name": "\u5b81\u590f",
+                    "value": 5
                 },
                 {
                     "name": "\u6e56\u5357",
                     "value": 16
                 },
                 {
-                    "name": "\u6d77\u5916",
-                    "value": 1
-                },
-                {
-                    "name": "\u4e0a\u6d77",
-                    "value": 47
-                },
-                {
-                    "name": "\u5929\u6d25",
+                    "name": "\u91cd\u5e86",
                     "value": 11
                 },
                 {
-                    "name": "\u6c5f\u897f",
-                    "value": 7
+                    "name": "\u56db\u5ddd",
+                    "value": 32
+                },
+                {
+                    "name": "\u5c71\u897f",
+                    "value": 2
+                },
+                {
+                    "name": "\u6d59\u6c5f",
+                    "value": 56
+                },
+                {
+                    "name": "\u5e7f\u4e1c",
+                    "value": 109
+                },
+                {
+                    "name": "\u6cb3\u5357",
+                    "value": 11
                 },
                 {
                     "name": "\u9655\u897f",
@@ -163,28 +171,20 @@
                     "value": 20
                 },
                 {
-                    "name": "\u6fb3\u95e8",
-                    "value": 5
+                    "name": "\u8d35\u5dde",
+                    "value": 9
                 },
                 {
                     "name": "\u4e91\u5357",
                     "value": 4
                 },
                 {
-                    "name": "\u5c71\u897f",
-                    "value": 2
+                    "name": "\u6d77\u5357",
+                    "value": 3
                 },
                 {
-                    "name": "\u5b81\u590f",
-                    "value": 5
-                },
-                {
-                    "name": "\u5e7f\u4e1c",
-                    "value": 109
-                },
-                {
-                    "name": "\u6cb3\u5317",
-                    "value": 12
+                    "name": "\u9ed1\u9f99",
+                    "value": 4
                 }
             ],
             "roam": true,
@@ -196,10 +196,10 @@
     "legend": [
         {
             "data": [
-                "\u5546\u5bb6A"
+                "\u96f7\u514b\u8428\u65afES\u8f66\u53cb\u5206\u5e03"
             ],
             "selected": {
-                "\u5546\u5bb6A": true
+                "\u96f7\u514b\u8428\u65afES\u8f66\u53cb\u5206\u5e03": true
             },
             "show": true
         }
@@ -218,11 +218,11 @@
     },
     "title": [
         {
-            "text": "Map-VisualMap\uff08\u5206\u6bb5\u578b\uff09"
+            "text": "\u96f7\u514b\u8428\u65afES\u8f66\u53cb\u5206\u5e03"
         }
     ],
     "visualMap": {
-        "type": "piecewise",
+        "type": "continuous",
         "min": 0,
         "max": 200,
         "inRange": {
@@ -238,7 +238,7 @@
         "showLabel": true
     }
 };
-        chart_7da22bd1de144489bd848a7fb8c82e3c.setOption(option_7da22bd1de144489bd848a7fb8c82e3c);
+        chart_2579ab0fb9de4497b7720a8cc118ed14.setOption(option_2579ab0fb9de4497b7720a8cc118ed14);
     </script>
 </body>
 </html>
