--- a/render.html
+++ b/render.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
+        <script type="text/javascript" src="https://assets.pyecharts.org/assets/maps/china.js"></script>
 
 </head>
 <body>
-    <div id="2e6178a4c8b0446fa7df3eb8efb03d06" style="width:900px; height:500px;"></div>
+    <div id="3fd04d8c5ba64017a07439a2d71afc46" style="width:900px; height:500px;"></div>
     <script>
-        var chart_2e6178a4c8b0446fa7df3eb8efb03d06 = echarts.init(
-            document.getElementById('2e6178a4c8b0446fa7df3eb8efb03d06'), 'white', {renderer: 'canvas'});
-        var option_2e6178a4c8b0446fa7df3eb8efb03d06 = {
+        var chart_3fd04d8c5ba64017a07439a2d71afc46 = echarts.init(
+            document.getElementById('3fd04d8c5ba64017a07439a2d71afc46'), 'white', {renderer: 'canvas'});
+        var option_3fd04d8c5ba64017a07439a2d71afc46 = {
     "color": [
         "#c23531",
         "#2f4554",
@@ -40,27 +41,307 @@
     ],
     "series": [
         {
-            "type": "bar",
-            "name": "\u96f7\u514b\u8428\u65afES",
-            "data": [
-                694,
-                857
-            ],
-            "barCategoryGap": "20%",
+            "type": "map",
+            "name": "\u96f7\u514b\u8428\u65afIS\u597d\u8bc4\u5206\u5e03",
             "label": {
                 "show": true,
                 "position": "top",
                 "margin": 8
-            }
+            },
+            "mapType": "china",
+            "data": [
+                {
+                    "name": "\u6e56\u5317",
+                    "value": 15
+                },
+                {
+                    "name": "\u65b0\u7586",
+                    "value": 1
+                },
+                {
+                    "name": "\u6cb3\u5357",
+                    "value": 5
+                },
+                {
+                    "name": "\u5e7f\u897f",
+                    "value": 19
+                },
+                {
+                    "name": "\u9752\u6d77",
+                    "value": 2
+                },
+                {
+                    "name": "\u5c71\u897f",
+                    "value": 2
+                },
+                {
+                    "name": "\u9655\u897f",
+                    "value": 5
+                },
+                {
+                    "name": "\u5409\u6797",
+                    "value": 1
+                },
+                {
+                    "name": "\u8fbd\u5b81",
+                    "value": 11
+                },
+                {
+                    "name": "\u5e7f\u4e1c",
+                    "value": 176
+                },
+                {
+                    "name": "\u4e0a\u6d77",
+                    "value": 38
+                },
+                {
+                    "name": "\u8d35\u5dde",
+                    "value": 10
+                },
+                {
+                    "name": "\u6fb3\u95e8",
+                    "value": 3
+                },
+                {
+                    "name": "\u6e56\u5357",
+                    "value": 7
+                },
+                {
+                    "name": "\u6d59\u6c5f",
+                    "value": 82
+                },
+                {
+                    "name": "\u5929\u6d25",
+                    "value": 7
+                },
+                {
+                    "name": "\u6cb3\u5317",
+                    "value": 11
+                },
+                {
+                    "name": "\u6d77\u5916",
+                    "value": 3
+                },
+                {
+                    "name": "\u91cd\u5e86",
+                    "value": 7
+                },
+                {
+                    "name": "\u56db\u5ddd",
+                    "value": 35
+                },
+                {
+                    "name": "\u5b89\u5fbd",
+                    "value": 13
+                },
+                {
+                    "name": "\u6c5f\u82cf",
+                    "value": 73
+                },
+                {
+                    "name": "\u5317\u4eac",
+                    "value": 55
+                },
+                {
+                    "name": "\u5185\u8499\u53e4",
+                    "value": 3
+                },
+                {
+                    "name": "\u9ed1\u9f99",
+                    "value": 4
+                },
+                {
+                    "name": "\u4e91\u5357",
+                    "value": 11
+                },
+                {
+                    "name": "\u5176\u5b83",
+                    "value": 2
+                },
+                {
+                    "name": "\u798f\u5efa",
+                    "value": 21
+                },
+                {
+                    "name": "\u897f\u85cf",
+                    "value": 3
+                },
+                {
+                    "name": "\u6c5f\u897f",
+                    "value": 7
+                },
+                {
+                    "name": "\u5c71\u4e1c",
+                    "value": 24
+                },
+                {
+                    "name": "\u6d77\u5357",
+                    "value": 4
+                },
+                {
+                    "name": "\u7518\u8083",
+                    "value": 1
+                }
+            ],
+            "roam": true,
+            "zoom": 1,
+            "showLegendSymbol": true,
+            "emphasis": {}
+        },
+        {
+            "type": "map",
+            "name": "\u96f7\u514b\u8428\u65afIS\u5dee\u8bc4\u5206\u5e03",
+            "label": {
+                "show": true,
+                "position": "top",
+                "margin": 8
+            },
+            "mapType": "china",
+            "data": [
+                {
+                    "name": "\u5e7f\u4e1c",
+                    "value": 131
+                },
+                {
+                    "name": "\u6c5f\u82cf",
+                    "value": 67
+                },
+                {
+                    "name": "\u798f\u5efa",
+                    "value": 10
+                },
+                {
+                    "name": "\u6d77\u5916",
+                    "value": 2
+                },
+                {
+                    "name": "\u5b89\u5fbd",
+                    "value": 5
+                },
+                {
+                    "name": "\u4e0a\u6d77",
+                    "value": 36
+                },
+                {
+                    "name": "\u9ed1\u9f99",
+                    "value": 3
+                },
+                {
+                    "name": "\u897f\u85cf",
+                    "value": 1
+                },
+                {
+                    "name": "\u65b0\u7586",
+                    "value": 2
+                },
+                {
+                    "name": "\u6cb3\u5357",
+                    "value": 6
+                },
+                {
+                    "name": "\u6e56\u5317",
+                    "value": 10
+                },
+                {
+                    "name": "\u5409\u6797",
+                    "value": 1
+                },
+                {
+                    "name": "\u91cd\u5e86",
+                    "value": 7
+                },
+                {
+                    "name": "\u4e91\u5357",
+                    "value": 12
+                },
+                {
+                    "name": "\u6e56\u5357",
+                    "value": 8
+                },
+                {
+                    "name": "\u8d35\u5dde",
+                    "value": 6
+                },
+                {
+                    "name": "\u7518\u8083",
+                    "value": 2
+                },
+                {
+                    "name": "\u5929\u6d25",
+                    "value": 5
+                },
+                {
+                    "name": "\u5e7f\u897f",
+                    "value": 14
+                },
+                {
+                    "name": "\u5c71\u897f",
+                    "value": 3
+                },
+                {
+                    "name": "\u6c5f\u897f",
+                    "value": 5
+                },
+                {
+                    "name": "\u6cb3\u5317",
+                    "value": 9
+                },
+                {
+                    "name": "\u9655\u897f",
+                    "value": 10
+                },
+                {
+                    "name": "\u5317\u4eac",
+                    "value": 46
+                },
+                {
+                    "name": "\u6fb3\u95e8",
+                    "value": 3
+                },
+                {
+                    "name": "\u8fbd\u5b81",
+                    "value": 8
+                },
+                {
+                    "name": "\u9999\u6e2f",
+                    "value": 4
+                },
+                {
+                    "name": "\u56db\u5ddd",
+                    "value": 32
+                },
+                {
+                    "name": "\u5c71\u4e1c",
+                    "value": 16
+                },
+                {
+                    "name": "\u6d59\u6c5f",
+                    "value": 42
+                },
+                {
+                    "name": "\u5185\u8499\u53e4",
+                    "value": 1
+                },
+                {
+                    "name": "\u6d77\u5357",
+                    "value": 1
+                }
+            ],
+            "roam": true,
+            "zoom": 1,
+            "showLegendSymbol": true,
+            "emphasis": {}
         }
     ],
     "legend": [
         {
             "data": [
-                "\u96f7\u514b\u8428\u65afES"
+                "\u96f7\u514b\u8428\u65afIS\u597d\u8bc4\u5206\u5e03",
+                "\u96f7\u514b\u8428\u65afIS\u5dee\u8bc4\u5206\u5e03"
             ],
             "selected": {
-                "\u96f7\u514b\u8428\u65afES": true
+                "\u96f7\u514b\u8428\u65afIS\u597d\u8bc4\u5206\u5e03": true,
+                "\u96f7\u514b\u8428\u65afIS\u5dee\u8bc4\u5206\u5e03": true
             },
             "show": true
         }
@@ -77,62 +358,27 @@
         },
         "borderWidth": 0
     },
-    "xAxis": [
-        {
-            "show": true,
-            "scale": false,
-            "nameLocation": "end",
-            "nameGap": 15,
-            "gridIndex": 0,
-            "inverse": false,
-            "offset": 0,
-            "splitNumber": 5,
-            "minInterval": 0,
-            "splitLine": {
-                "show": false,
-                "lineStyle": {
-                    "width": 1,
-                    "opacity": 1,
-                    "curveness": 0,
-                    "type": "solid"
-                }
-            },
-            "data": [
-                "\u597d\u8bc4\u6307\u6570",
-                "\u5dee\u8bc4\u6307\u6570"
-            ]
-        }
-    ],
-    "yAxis": [
-        {
-            "show": true,
-            "scale": false,
-            "nameLocation": "end",
-            "nameGap": 15,
-            "gridIndex": 0,
-            "inverse": false,
-            "offset": 0,
-            "splitNumber": 5,
-            "minInterval": 0,
-            "splitLine": {
-                "show": false,
-                "lineStyle": {
-                    "width": 1,
-                    "opacity": 1,
-                    "curveness": 0,
-                    "type": "solid"
-                }
-            }
-        }
-    ],
     "title": [
-        {
-            "text": "\u96f7\u514b\u8428\u65afES\u60c5\u611f\u5206\u6790",
-            "subtext": "\u597d\u5dee\u8bc4\u6307\u6570"
-        }
-    ]
+        {}
+    ],
+    "visualMap": {
+        "type": "continuous",
+        "min": 0,
+        "max": 200,
+        "inRange": {
+            "color": [
+                "#50a3ba",
+                "#eac763",
+                "#d94e5d"
+            ]
+        },
+        "calculable": true,
+        "splitNumber": 5,
+        "orient": "vertical",
+        "showLabel": true
+    }
 };
-        chart_2e6178a4c8b0446fa7df3eb8efb03d06.setOption(option_2e6178a4c8b0446fa7df3eb8efb03d06);
+        chart_3fd04d8c5ba64017a07439a2d71afc46.setOption(option_3fd04d8c5ba64017a07439a2d71afc46);
     </script>
 </body>
 </html>
